[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Title screen 2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/Save_Slots.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 963.07, 543.697 )
scale = Vector2( 2.40942, 2.17474 )
texture = ExtResource( 2 )

[node name="New" type="Button" parent="."]
margin_left = 90.2606
margin_top = 616.032
margin_right = 310.261
margin_bottom = 662.032
rect_scale = Vector2( 1.6, 1.6 )
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Load")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "NEW GAME"
flat = true

[node name="Load" type="Button" parent="."]
margin_left = 88.4916
margin_top = 716.032
margin_right = 316.492
margin_bottom = 762.032
rect_scale = Vector2( 1.6, 1.6 )
focus_neighbour_top = NodePath("../New")
focus_neighbour_bottom = NodePath("../Credits")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "LOAD GAME"
flat = true

[node name="Credits" type="Button" parent="."]
pause_mode = 2
margin_left = 90.2606
margin_top = 816.032
margin_right = 267.261
margin_bottom = 862.032
rect_scale = Vector2( 1.6, 1.6 )
focus_neighbour_top = NodePath("../Load")
focus_neighbour_bottom = NodePath("../Exit")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "CREDITS"
flat = true

[node name="Exit" type="Button" parent="."]
margin_left = 85.2606
margin_top = 916.032
margin_right = 188.261
margin_bottom = 962.032
rect_scale = Vector2( 1.6, 1.6 )
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../New")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "EXIT"
flat = true

[node name="Load_Screen" type="Node2D" parent="."]
visible = false
position = Vector2( 650, 275 )

[node name="Save Slots" parent="Load_Screen" instance=ExtResource( 4 )]
margin_bottom = 772.0
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
